--- a/docs/ha-config/configuration.yaml
+++ b/docs/ha-config/configuration.yaml
@@ -1,29 +1,37 @@
 # HDMI Matrix Proxy - Home Assistant Configuration
 # Copy these sections into your main configuration.yaml
+#
+# This configuration uses the API's name-based routing feature.
+# Input names are pulled from the matrix and used directly in dropdowns.
+# No need to configure names in two places!
 
-# Customize input_select friendly names to show which output they control
-homeassistant:
-  customize:
-    input_select.matrix_output_1_source:
-      friendly_name: "Output 1"
-    input_select.matrix_output_2_source:
-      friendly_name: "Output 2"
-    input_select.matrix_output_3_source:
-      friendly_name: "Output 3"
-    input_select.matrix_output_4_source:
-      friendly_name: "Output 4"
-    input_select.matrix_output_5_source:
-      friendly_name: "Output 5"
-    input_select.matrix_output_6_source:
-      friendly_name: "Output 6"
-    input_select.matrix_output_7_source:
-      friendly_name: "Output 7"
-    input_select.matrix_output_8_source:
-      friendly_name: "Output 8"
-
+# ============================================================================
 # REST API Integration
+# ============================================================================
 rest:
-  # Main routing sensor - includes custom names from matrix
+  # Input names list - for populating dropdown options
+  - resource: "http://hdmi-matrix-proxy:8080/api/inputs"
+    scan_interval: 300  # Refresh every 5 minutes (names don't change often)
+    sensor:
+      - name: "HDMI Matrix Inputs"
+        value_template: "{{ value_json.inputs | length }}"
+        json_attributes:
+          - inputs
+          - names
+        icon: mdi:video-input-hdmi
+
+  # Output names list
+  - resource: "http://hdmi-matrix-proxy:8080/api/outputs"
+    scan_interval: 300
+    sensor:
+      - name: "HDMI Matrix Outputs"
+        value_template: "{{ value_json.outputs | length }}"
+        json_attributes:
+          - outputs
+          - names
+        icon: mdi:television
+
+  # Main routing sensor - current state
   - resource: "http://hdmi-matrix-proxy:8080/api/routing"
     scan_interval: 10
     sensor:
@@ -57,203 +65,154 @@ rest:
           - uptime_seconds
         icon: mdi:heart-pulse
 
-# REST Commands for routing
+# ============================================================================
+# REST Commands for routing - Now accepts names for BOTH outputs AND inputs!
+# ============================================================================
 rest_command:
+  # Generic routing command - accepts output AND input by NAME or number
+  # Usage: service: rest_command.matrix_route
+  #        data:
+  #          output: "Living Room TV"   # or just: output: 1
+  #          input: "PlayStation 5"     # or just: input: 3
+  matrix_route:
+    url: "http://hdmi-matrix-proxy:8080/api/routing/output/{{ output | urlencode }}"
+    method: POST
+    content_type: "application/json"
+    payload: '{"input": "{{ input }}"}'
+
+  # Individual output commands (for backward compatibility)
   matrix_route_output_1:
     url: "http://hdmi-matrix-proxy:8080/api/routing/output/1"
     method: POST
     content_type: "application/json"
-    payload: '{"input": {{ input }}}'
+    payload: '{"input": "{{ input }}"}'
 
   matrix_route_output_2:
     url: "http://hdmi-matrix-proxy:8080/api/routing/output/2"
     method: POST
     content_type: "application/json"
-    payload: '{"input": {{ input }}}'
+    payload: '{"input": "{{ input }}"}'
 
   matrix_route_output_3:
     url: "http://hdmi-matrix-proxy:8080/api/routing/output/3"
     method: POST
     content_type: "application/json"
-    payload: '{"input": {{ input }}}'
+    payload: '{"input": "{{ input }}"}'
 
   matrix_route_output_4:
     url: "http://hdmi-matrix-proxy:8080/api/routing/output/4"
     method: POST
     content_type: "application/json"
-    payload: '{"input": {{ input }}}'
+    payload: '{"input": "{{ input }}"}'
 
   matrix_route_output_5:
     url: "http://hdmi-matrix-proxy:8080/api/routing/output/5"
     method: POST
     content_type: "application/json"
-    payload: '{"input": {{ input }}}'
+    payload: '{"input": "{{ input }}"}'
 
   matrix_route_output_6:
     url: "http://hdmi-matrix-proxy:8080/api/routing/output/6"
     method: POST
     content_type: "application/json"
-    payload: '{"input": {{ input }}}'
+    payload: '{"input": "{{ input }}"}'
 
   matrix_route_output_7:
     url: "http://hdmi-matrix-proxy:8080/api/routing/output/7"
     method: POST
     content_type: "application/json"
-    payload: '{"input": {{ input }}}'
+    payload: '{"input": "{{ input }}"}'
 
   matrix_route_output_8:
     url: "http://hdmi-matrix-proxy:8080/api/routing/output/8"
     method: POST
     content_type: "application/json"
-    payload: '{"input": {{ input }}}'
+    payload: '{"input": "{{ input }}"}'
 
-  # Preset routing command
+  # Preset routing command - accepts names for BOTH outputs AND inputs!
+  # Examples:
+  #   {"mappings": {"1": "Apple TV", "2": "PlayStation 5"}}
+  #   {"mappings": {"Living Room TV": "Apple TV", "Bedroom TV": "PlayStation 5"}}
   matrix_preset:
     url: "http://hdmi-matrix-proxy:8080/api/routing/preset"
     method: POST
     content_type: "application/json"
     payload: '{{ mappings }}'
 
-# Input Select Helpers (for UI control)
+# ============================================================================
+# Input Select Helpers
+# Options are dynamically populated from the API on startup (see automations)
+# These defaults are just placeholders - they get replaced automatically
+# ============================================================================
 input_select:
   matrix_output_1_source:
     name: "Output 1 Source"
-    options:
-      - "1"
-      - "2"
-      - "3"
-      - "4"
-      - "5"
-      - "6"
-      - "7"
-      - "8"
-    initial: "1"
-    icon: mdi:video-input-hdmi
+    options: &input_options_placeholder
+      - "Loading..."
+    icon: mdi:television
 
   matrix_output_2_source:
     name: "Output 2 Source"
-    options:
-      - "1"
-      - "2"
-      - "3"
-      - "4"
-      - "5"
-      - "6"
-      - "7"
-      - "8"
-    initial: "1"
-    icon: mdi:video-input-hdmi
+    options: *input_options_placeholder
+    icon: mdi:television
 
   matrix_output_3_source:
     name: "Output 3 Source"
-    options:
-      - "1"
-      - "2"
-      - "3"
-      - "4"
-      - "5"
-      - "6"
-      - "7"
-      - "8"
-    initial: "1"
-    icon: mdi:video-input-hdmi
+    options: *input_options_placeholder
+    icon: mdi:television
 
   matrix_output_4_source:
     name: "Output 4 Source"
-    options:
-      - "1"
-      - "2"
-      - "3"
-      - "4"
-      - "5"
-      - "6"
-      - "7"
-      - "8"
-    initial: "1"
-    icon: mdi:video-input-hdmi
+    options: *input_options_placeholder
+    icon: mdi:television
 
   matrix_output_5_source:
     name: "Output 5 Source"
-    options:
-      - "1"
-      - "2"
-      - "3"
-      - "4"
-      - "5"
-      - "6"
-      - "7"
-      - "8"
-    initial: "1"
-    icon: mdi:video-input-hdmi
+    options: *input_options_placeholder
+    icon: mdi:television
 
   matrix_output_6_source:
     name: "Output 6 Source"
-    options:
-      - "1"
-      - "2"
-      - "3"
-      - "4"
-      - "5"
-      - "6"
-      - "7"
-      - "8"
-    initial: "1"
-    icon: mdi:video-input-hdmi
+    options: *input_options_placeholder
+    icon: mdi:television
 
   matrix_output_7_source:
     name: "Output 7 Source"
-    options:
-      - "1"
-      - "2"
-      - "3"
-      - "4"
-      - "5"
-      - "6"
-      - "7"
-      - "8"
-    initial: "1"
-    icon: mdi:video-input-hdmi
+    options: *input_options_placeholder
+    icon: mdi:television
 
   matrix_output_8_source:
     name: "Output 8 Source"
-    options:
-      - "1"
-      - "2"
-      - "3"
-      - "4"
-      - "5"
-      - "6"
-      - "7"
-      - "8"
-    initial: "1"
-    icon: mdi:video-input-hdmi
+    options: *input_options_placeholder
+    icon: mdi:television
 
-# Template Sensors (for displaying custom names)
+# ============================================================================
+# Note: Output names are pulled from the API dynamically
+# The template sensors below will show the output names from your matrix
+# No need to hardcode them here!
+# ============================================================================
+
+# ============================================================================
+# Template Sensors - Show current source for each output
+# ============================================================================
 template:
   - sensor:
-      # Current sources for each output with custom names
       - name: "Matrix Output 1 Current Source"
         unique_id: matrix_output_1_current_source
         state: >
           {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% set input_names = state_attr('sensor.hdmi_matrix_routing', 'input_names') %}
           {% if outputs %}
             {% set output = outputs | selectattr('output', 'eq', 1) | first %}
-            {% if output.input and input_names %}
-              {{ input_names[output.input | string] }}
-            {% elif output.input %}
-              HDMI {{ output.input }}
-            {% else %}
-              Unknown
-            {% endif %}
+            {{ output.input_name if output.input_name else 'Unknown' }}
           {% else %}
             Unknown
           {% endif %}
         attributes:
           output_name: >
-            {% set output_names = state_attr('sensor.hdmi_matrix_routing', 'output_names') %}
-            {% if output_names %}
-              {{ output_names['1'] }}
+            {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
+            {% if outputs %}
+              {% set output = outputs | selectattr('output', 'eq', 1) | first %}
+              {{ output.output_name if output.output_name else 'Output 1' }}
             {% else %}
               Output 1
             {% endif %}
@@ -263,24 +222,18 @@ template:
         unique_id: matrix_output_2_current_source
         state: >
           {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% set input_names = state_attr('sensor.hdmi_matrix_routing', 'input_names') %}
           {% if outputs %}
             {% set output = outputs | selectattr('output', 'eq', 2) | first %}
-            {% if output.input and input_names %}
-              {{ input_names[output.input | string] }}
-            {% elif output.input %}
-              HDMI {{ output.input }}
-            {% else %}
-              Unknown
-            {% endif %}
+            {{ output.input_name if output.input_name else 'Unknown' }}
           {% else %}
             Unknown
           {% endif %}
         attributes:
           output_name: >
-            {% set output_names = state_attr('sensor.hdmi_matrix_routing', 'output_names') %}
-            {% if output_names %}
-              {{ output_names['2'] }}
+            {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
+            {% if outputs %}
+              {% set output = outputs | selectattr('output', 'eq', 2) | first %}
+              {{ output.output_name if output.output_name else 'Output 2' }}
             {% else %}
               Output 2
             {% endif %}
@@ -290,51 +243,39 @@ template:
         unique_id: matrix_output_3_current_source
         state: >
           {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% set input_names = state_attr('sensor.hdmi_matrix_routing', 'input_names') %}
           {% if outputs %}
             {% set output = outputs | selectattr('output', 'eq', 3) | first %}
-            {% if output.input and input_names %}
-              {{ input_names[output.input | string] }}
-            {% elif output.input %}
-              HDMI {{ output.input }}
-            {% else %}
-              Unknown
-            {% endif %}
+            {{ output.input_name if output.input_name else 'Unknown' }}
           {% else %}
             Unknown
           {% endif %}
         attributes:
           output_name: >
-            {% set output_names = state_attr('sensor.hdmi_matrix_routing', 'output_names') %}
-            {% if output_names %}
-              {{ output_names['3'] }}
+            {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
+            {% if outputs %}
+              {% set output = outputs | selectattr('output', 'eq', 3) | first %}
+              {{ output.output_name if output.output_name else 'Output 3' }}
             {% else %}
               Output 3
             {% endif %}
-        icon: mdi:television
+        icon: mdi:monitor
 
       - name: "Matrix Output 4 Current Source"
         unique_id: matrix_output_4_current_source
         state: >
           {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% set input_names = state_attr('sensor.hdmi_matrix_routing', 'input_names') %}
           {% if outputs %}
             {% set output = outputs | selectattr('output', 'eq', 4) | first %}
-            {% if output.input and input_names %}
-              {{ input_names[output.input | string] }}
-            {% elif output.input %}
-              HDMI {{ output.input }}
-            {% else %}
-              Unknown
-            {% endif %}
+            {{ output.input_name if output.input_name else 'Unknown' }}
           {% else %}
             Unknown
           {% endif %}
         attributes:
           output_name: >
-            {% set output_names = state_attr('sensor.hdmi_matrix_routing', 'output_names') %}
-            {% if output_names %}
-              {{ output_names['4'] }}
+            {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
+            {% if outputs %}
+              {% set output = outputs | selectattr('output', 'eq', 4) | first %}
+              {{ output.output_name if output.output_name else 'Output 4' }}
             {% else %}
               Output 4
             {% endif %}
@@ -344,24 +285,18 @@ template:
         unique_id: matrix_output_5_current_source
         state: >
           {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% set input_names = state_attr('sensor.hdmi_matrix_routing', 'input_names') %}
           {% if outputs %}
             {% set output = outputs | selectattr('output', 'eq', 5) | first %}
-            {% if output.input and input_names %}
-              {{ input_names[output.input | string] }}
-            {% elif output.input %}
-              HDMI {{ output.input }}
-            {% else %}
-              Unknown
-            {% endif %}
+            {{ output.input_name if output.input_name else 'Unknown' }}
           {% else %}
             Unknown
           {% endif %}
         attributes:
           output_name: >
-            {% set output_names = state_attr('sensor.hdmi_matrix_routing', 'output_names') %}
-            {% if output_names %}
-              {{ output_names['5'] }}
+            {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
+            {% if outputs %}
+              {% set output = outputs | selectattr('output', 'eq', 5) | first %}
+              {{ output.output_name if output.output_name else 'Output 5' }}
             {% else %}
               Output 5
             {% endif %}
@@ -371,24 +306,18 @@ template:
         unique_id: matrix_output_6_current_source
         state: >
           {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% set input_names = state_attr('sensor.hdmi_matrix_routing', 'input_names') %}
           {% if outputs %}
             {% set output = outputs | selectattr('output', 'eq', 6) | first %}
-            {% if output.input and input_names %}
-              {{ input_names[output.input | string] }}
-            {% elif output.input %}
-              HDMI {{ output.input }}
-            {% else %}
-              Unknown
-            {% endif %}
+            {{ output.input_name if output.input_name else 'Unknown' }}
           {% else %}
             Unknown
           {% endif %}
         attributes:
           output_name: >
-            {% set output_names = state_attr('sensor.hdmi_matrix_routing', 'output_names') %}
-            {% if output_names %}
-              {{ output_names['6'] }}
+            {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
+            {% if outputs %}
+              {% set output = outputs | selectattr('output', 'eq', 6) | first %}
+              {{ output.output_name if output.output_name else 'Output 6' }}
             {% else %}
               Output 6
             {% endif %}
@@ -398,24 +327,18 @@ template:
         unique_id: matrix_output_7_current_source
         state: >
           {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% set input_names = state_attr('sensor.hdmi_matrix_routing', 'input_names') %}
           {% if outputs %}
             {% set output = outputs | selectattr('output', 'eq', 7) | first %}
-            {% if output.input and input_names %}
-              {{ input_names[output.input | string] }}
-            {% elif output.input %}
-              HDMI {{ output.input }}
-            {% else %}
-              Unknown
-            {% endif %}
+            {{ output.input_name if output.input_name else 'Unknown' }}
           {% else %}
             Unknown
           {% endif %}
         attributes:
           output_name: >
-            {% set output_names = state_attr('sensor.hdmi_matrix_routing', 'output_names') %}
-            {% if output_names %}
-              {{ output_names['7'] }}
+            {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
+            {% if outputs %}
+              {% set output = outputs | selectattr('output', 'eq', 7) | first %}
+              {{ output.output_name if output.output_name else 'Output 7' }}
             {% else %}
               Output 7
             {% endif %}
@@ -425,25 +348,19 @@ template:
         unique_id: matrix_output_8_current_source
         state: >
           {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% set input_names = state_attr('sensor.hdmi_matrix_routing', 'input_names') %}
           {% if outputs %}
             {% set output = outputs | selectattr('output', 'eq', 8) | first %}
-            {% if output.input and input_names %}
-              {{ input_names[output.input | string] }}
-            {% elif output.input %}
-              HDMI {{ output.input }}
-            {% else %}
-              Unknown
-            {% endif %}
+            {{ output.input_name if output.input_name else 'Unknown' }}
           {% else %}
             Unknown
           {% endif %}
         attributes:
           output_name: >
-            {% set output_names = state_attr('sensor.hdmi_matrix_routing', 'output_names') %}
-            {% if output_names %}
-              {{ output_names['8'] }}
+            {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
+            {% if outputs %}
+              {% set output = outputs | selectattr('output', 'eq', 8) | first %}
+              {{ output.output_name if output.output_name else 'Output 8' }}
             {% else %}
               Output 8
             {% endif %}
-        icon: mdi:television
+        icon: mdi:monitor
